--- a/index.html
+++ b/index.html
@@ -489,7 +489,7 @@ application and practice of creating durable images by recording light,
                     />
                   </figure>
                   <div data-aos="fade-up" data-aos-delay="100">
-                    <h2 class="text-white">Hi I'm Jed</h2>
+                    <h2 class="text-white">Hi I'm CH.Vinod Kumar</h2>
                     <p>
                       Vinod Kumar photographer considered a master of candid
                       photography, and an early user of 35 mm film. He pioneered
